--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,4 +1,4 @@
-//Bootstrap styles 
+//Bootstrap styles
 @import "node_modules/bootstrap/scss/bootstrap";
 
 //Custom mixins
@@ -7,5 +7,10 @@
 //Custom settings --
 @import "settings";
 
-//Component specific styles 
+//Component specific styles
 @import "components/callout";
+@import "components/card";
+@import "components/icons";
+@import "components/modal";
+
+@import "pages/home";
