--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -7,21 +7,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Page Title</title>
+    <title>Quote Tool</title>
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
+    <link rel="stylesheet" href="{{root}}assets/js/vendor/slick-carousel/slick/slick.css">
+    <link rel="stylesheet" href="{{root}}assets/js/vendor/slick-carousel/slick/slick-theme.css">
 </head>
 
 <body>
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
 
-    {{>navigation}}
+    {{> navigation}}
     <main role="main" class="container">
+        {{> navigation-buttons}}
         {{> body}}
     </main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="{{root}}assets/js/vendor/bootstrap-input-spinner/src/bootstrap-input-spinner.js"></script>
+    <script type="text/javascript" src="{{root}}assets/js/vendor/slick-carousel/slick/slick.js"></script>
     <script src="{{root}}assets/js/app.js"></script>
 </body>
 </html>
