Added new cards, footer, mobile navbar

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,5 +12,6 @@
 @import "components/card";
 @import "components/icons";
 @import "components/modal";
+@import "components/footer";
 
 @import "pages/home";
