--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -1,3 +1,9 @@
 .card {
   box-shadow: 1px 6px 16px -2px rgba(0, 0, 0, 0.07);
+  &.selected {
+    border: 1px solid#62CDCD !important;
+    box-shadow: 1px 7px 24px -1px rgba(98, 205, 205, 0.77);
+  }
 }
+
+// toggle this class on click
