--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -16,11 +16,14 @@
 <body>
 	{{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
 
-	{{> navigation}}
-	<main role="main" class="container">
-		{{> navigation-buttons}}
+	{{> header}}
+
+	<main role="main" class="container-fluid px-lg-5 px-md-3 px-sm-1 px-1 mb-5">
+		{{> buttons}}
 		{{> body}}
 	</main>
+	{{> mobile-nav}}
+	{{> footer}}
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
