Added show more button, trigger for filters

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,10 +8,10 @@
 @import "settings";
 
 //Component specific styles
-@import "components/callout";
 @import "components/card";
 @import "components/icons";
 @import "components/modal";
 @import "components/footer";
+@import "components/mobile-nav";
 
 @import "pages/home";
