--- a/src/partials/mobile-nav.html
+++ b/src/partials/mobile-nav.html
@@ -1,17 +1,15 @@
-<div class="fixed-bottom d-md-none">
+<div id="mobile-nav" class="fixed-bottom d-md-none">
   <div class="container-fluid">
     <div class="row fixed-bottom bg-primary py-2">
-
-        <div class="col-4 text-center px-0"><a href="#" class="text-white">
+      <div class="col-4 text-center px-0"><a href="#" class="text-white trigger-button">
           <span class="filters m-0"></span><br>Filters</a>
-        </div>
-        <div class="col-4 text-center px-0"><a href="#" class="text-white">
+      </div>
+      <div class="col-4 text-center px-0"><a href="#" class="text-white">
           <span class="home"></span><br>Home</a>
-        </div>
-        <div class="col-4 text-center px-0"><a href="#" class="text-white">
+      </div>
+      <div class="col-4 text-center px-0"><a href="#" class="text-white">
           <span class="next"></span><br>Next</a>
-        </div>
-
+      </div>
     </div>
   </div>
 </div>
