--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -1,9 +1,60 @@
 .card {
   box-shadow: 1px 6px 16px -2px rgba(0, 0, 0, 0.07);
+
   &.selected {
     border: 1px solid#62CDCD !important;
     box-shadow: 1px 7px 24px -1px rgba(98, 205, 205, 0.77);
   }
 }
 
-// toggle this class on click
+.card-title {
+  font-size: 1.25rem;
+}
+
+.card-text {
+  font-size: 14px;
+  line-height: 23px;
+  color: $gray-600 !important;
+}
+
+.category {
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    padding-top: 1rem;
+    border-bottom: 1px solid #000;
+    width: 4rem;
+  }
+}
+
+.btn-floating {
+  box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
+  width: 36px;
+  height: 36px;
+  position: relative;
+  z-index: 1;
+  vertical-align: middle;
+  display: inline-block;
+  overflow: hidden;
+  transition: all .2s ease-in-out;
+  margin: 10px;
+  border-radius: 50%;
+  padding: 0;
+  cursor: pointer;
+  background-color: #1E5E5E;
+  margin-top: -1.44rem;
+  margin-bottom: -1.44rem;
+  margin-left: auto !important;
+  margin-right: 2rem!important;
+  &::after {
+    content: '';
+    background: url(../../assets/img/svg/plus.svg) 0% 0% no-repeat padding-box;
+    background-size: contain;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    transform: translate(6px, 6px);
+    background-color: #1E5E5E;
+  }
+}
