--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -17,6 +17,11 @@
   color: $gray-600 !important;
 }
 
+.card-body {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .category {
   &::after {
     content: '';
