--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -3,3 +3,18 @@
   padding-top: 20px;
   text-align: center;
 }
+
+.collapse {
+  display: block !important;
+  height: 0px;
+  overflow: hidden;
+}
+.collapse.in {
+  display: block !important;
+  height: auto !important;
+}
+
+.collapse:not(.show)  {
+  display: block !important;
+  height: 0px;
+  }
