--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto py-3 bg-light">
+<footer class="footer mt-auto py-3 bg-light border-top" style="height: 80px"">
   <div class="container">
     <span class="text-muted"></span>
   </div>
