--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,2 @@
-<nav class="navbar navbar-expand-md bg-light mb-4">
-
+<nav class="navbar navbar-expand-md bg-light mb-4 border-bottom" style="height: 80px">
 </nav>
