Minnor changes, fontawesome 4.7.0

--- a/src/assets/scss/components/_icons.scss
+++ b/src/assets/scss/components/_icons.scss
@@ -5,8 +5,7 @@ span.filters {
   display: inline-block;
   width: 24px;
   height: 24px;
-  vertical-align: middle;
-  margin-bottom: 4px;
+  vertical-align: sub;
   margin-right: .5rem;
 }
 
@@ -18,7 +17,6 @@ span.product {
   width: 24px;
   height: 24px;
   vertical-align: middle;
-  margin-bottom: 4px;
   margin-right: .5rem;
 }
 
@@ -30,7 +28,6 @@ span.save {
   width: 24px;
   height: 24px;
   vertical-align: middle;
-  margin-bottom: 4px;
   margin-right: .5rem;
 }
 
@@ -42,7 +39,6 @@ span.send {
   width: 24px;
   height: 24px;
   vertical-align: middle;
-  margin-bottom: 4px;
   margin-right: .5rem;
 }
 
@@ -58,7 +54,6 @@ span.arrow-right {
   display: inline-block;
   width: 64px;
   height: 64px;
-  margin-bottom: 4px;
   margin-right: .5rem;
 }
 
@@ -73,7 +68,6 @@ span.arrow-left {
   left: -3rem;
   width: 64px;
   height: 64px;
-  margin-bottom: 4px;
   margin-right: .5rem;
 }
 
