--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -11,15 +11,15 @@
 	<link rel="stylesheet" href="{{root}}assets/css/app.css">
 	<link rel="stylesheet" href="{{root}}assets/js/vendor/slick-carousel/slick/slick.css">
 	<link rel="stylesheet" href="{{root}}assets/js/vendor/slick-carousel/slick/slick-theme.css">
+
+	<!-- Font Awesome Icons -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-	{{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
-
 	{{> header}}
 
 	<main role="main" class="container-fluid px-lg-5 px-md-3 px-sm-1 px-1 mb-5">
-		{{> buttons}}
 		{{> body}}
 	</main>
 	{{> mobile-nav}}
