--- a/src/partials/mobile-nav.html
+++ b/src/partials/mobile-nav.html
@@ -1,4 +1,4 @@
-<div id="mobile-nav" class="fixed-bottom d-md-none">
+<!-- <div id="mobile-nav" class="fixed-bottom d-md-none">
   <div class="container-fluid">
     <div class="row fixed-bottom bg-primary py-2">
       <div class="col-4 text-center px-0"><a href="#" class="text-white trigger-button">
@@ -12,4 +12,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
