--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -13,5 +13,6 @@
 @import "components/modal";
 @import "components/footer";
 @import "components/mobile-nav";
+@import "components/buttons";
 
 @import "pages/home";
