--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -38,8 +38,10 @@
       slidesPerView: 5,
 			freeMode: true,
       pagination: {
-        el: '.swiper-pagination',
-        clickable: true,
+				el: '.swiper-pagination',
+				type: 'bullets',
+				clickable: true,
+				dynamicBullets: true,
 			},
 			navigation: {
         nextEl: '.swiper-button-next',
