--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -30,7 +30,7 @@
     padding-top: 1rem;
     border-bottom: 1px solid #000;
     width: 4rem;
-    @include media-breakpoint-down(md) {
+    @include media-breakpoint-down(sm) {
       border: 0 !important;
     }
   }
