--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -26,27 +26,34 @@
 	{{> mobile-nav}}
 	{{> footer}}
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="{{root}}assets/vendor/bootstrap-input-spinner/src/bootstrap-input-spinner.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+	</script>
+	<script type="text/javascript" src="{{root}}assets/vendor/bootstrap-input-spinner/src/bootstrap-input-spinner.js">
+	</script>
 	<!-- <script type="text/javascript" src="{{root}}assets/js/vendor/slick-carousel/slick/slick.js"></script> -->
 	<script type="text/javascript" src="{{root}}assets/vendor/swiper/dist/js/swiper.min.js"></script>
 	<script src="{{root}}assets/js/app.js"></script>
 	<script>
 		var swiper = new Swiper('.swiper-container', {
-      slidesPerView: 5,
+			slidesPerView: 5,
 			freeMode: true,
-      pagination: {
+			pagination: {
 				el: '.swiper-pagination',
 				type: 'bullets',
 				clickable: true,
 				dynamicBullets: true,
 			},
 			navigation: {
-        nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev',
-      },
+				nextEl: '.swiper-button-next',
+				prevEl: '.swiper-button-prev',
+			},
 			breakpoints: {
 				1600: {
 					slidesPerView: 4,
@@ -56,14 +63,13 @@
 				},
 				992: {
 					slidesPerView: 2,
-					navigation: false,
 				},
 				768: {
 					slidesPerView: 2,
-					navigation: false,
 				}
 			}
-    });
-		</script>
+		});
+	</script>
 </body>
+
 </html>
