--- a/src/assets/scss/mixins/mixins.scss
+++ b/src/assets/scss/mixins/mixins.scss
@@ -1,1 +1,16 @@
-/* sample file */
+// Typograpgy breakpoints size
+h2 {
+  @include media-breakpoint-down(sm) {
+    font-size: 1.25rem;
+  }
+}
+
+h4 {
+  @include media-breakpoint-down(sm) {
+    font-size: 1rem;
+  }
+}
+
+.input-group-sm {
+  
+}
