--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
-<nav class="navbar bg-light border-bottom position-relative" style="height: 100px !important;">
+<nav class="navbar bg-light border-bottom position-relative" style="height: 60px !important;">
 
 </nav>
-<nav class="bg-light sticky-top fixed-top border-bottom mb-5 px-4 py-2">
+<nav class="bg-light sticky-top border-bottom mb-3 px-4 py-2">
   <div class="row justify-content-between">
     <div class="col">
       <div class="dropdown">
