--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -129,7 +129,14 @@
             </div>
             <!-- Accordion wrapper -->
             <div class="dropdown-divider"></div>
-            <button type="reset" class="mb-3 mx-auto btn btn-xl w-100 btn-primary">Reset</button>
+            <div class="row justify-content-between my-1">
+              <div class="col-6">
+                <button type="reset" class="btn btn-xl btn-primary">Reset</button>
+              </div>
+              <div class="col-6">
+                <button type="button" class="btn btn-xl btn-outline-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
           </form>
 
         </div>
