Dropdown close button toggler

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -134,7 +134,7 @@
                 <button type="reset" class="btn btn-xl btn-primary">Reset</button>
               </div>
               <div class="col-6">
-                <button type="button" class="btn btn-xl btn-outline-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-xl btn-outline-secondary" data-dismiss="modal" data-toggle="dropdown">Close</button>
               </div>
             </div>
           </form>
