Modal iPhone fixed

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -169,7 +169,7 @@
 <!-- Modal -->
 <div class="modal fade" id="priceModal" tabindex="-1" role="dialog" aria-labelledby="priceModalTitel"
   aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-dialog-scrollable modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-body">
 
