--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -21,6 +21,178 @@
 	{{> header}}
 
 	<main role="main" class="container-fluid px-lg-5 px-md-5 px-sm-2 px-2 mb-5">
+		<!-- Modal -->
+		<div class="modal fade" id="priceModal" tabindex="-1" role="dialog" aria-labelledby="priceModalTitle"
+			aria-hidden="true">
+			<div class="modal-dialog modal-lg" role="document">
+				<div class="modal-content">
+
+
+					<div class="modal-header">
+						<h5 class="modal-title" id="priceModalTitle">Price</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+
+
+					<div class="modal-body">
+						<div class="container-fluid">
+							<div class="row">
+								<div class="col p-0 m-0">
+								<table class="table table-sm table-borderless">
+									<thead>
+										<tr>
+											<th scope="col">Product</th>
+											<th scope="col">Quantity</th>
+											<th scope="col">Price</th>
+											<th scope="col">Discount</th>
+											<th scope="col">Total</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td colspan="5">
+												<div class="col-12 mb-3 mt-5">
+													<h4><span class="product"></span>Category 1</h4>
+												</div>
+											</td>
+										</tr>
+										<tr class="table-active">
+											<td>Product</td>
+											<td>5</td>
+											<td>100$</td>
+											<td>10%</td>
+											<td>3200$</td>
+										</tr>
+										<tr style="height: .5rem;"></tr>
+										<tr class="table-active">
+											<td>Product</td>
+											<td>5</td>
+											<td>100$</td>
+											<td>10%</td>
+											<td>3200$</td>
+										</tr>
+										<tr style="height: .5rem;"></tr>
+										<tr class="table-active">
+											<td>Product</td>
+											<td>5</td>
+											<td>100$</td>
+											<td>10%</td>
+											<td>3200$</td>
+										</tr>
+										<tr>
+											<td colspan="5">
+												<div class="col-12 mb-3 mt-5">
+													<h4><span class="product"></span>Category 1</h4>
+												</div>
+											</td>
+										</tr>
+										<tr class="table-active">
+											<td>Product</td>
+											<td>5</td>
+											<td>100$</td>
+											<td>10%</td>
+											<td>3200$</td>
+										</tr>
+										<tr style="height: .5rem;"></tr>
+										<tr class="table-active">
+											<td>Product</td>
+											<td>5</td>
+											<td>100$</td>
+											<td>10%</td>
+											<td>3200$</td>
+										</tr>
+										<tr style="height: .5rem;"></tr>
+										<tr class="table-active">
+											<td>Product</td>
+											<td>5</td>
+											<td>100$</td>
+											<td>10%</td>
+											<td>3200$</td>
+										</tr>
+										<tr>
+											<td colspan="5">
+												<div class="col-12 mb-3 mt-5">
+													<h4><span class="product"></span>Category 1</h4>
+												</div>
+											</td>
+										</tr>
+										<tr class="table-active">
+											<td>Product</td>
+											<td>5</td>
+											<td>100$</td>
+											<td>10%</td>
+											<td>3200$</td>
+										</tr>
+										<tr style="height: .5rem;"></tr>
+										<tr class="table-active">
+											<td>Product</td>
+											<td>5</td>
+											<td>100$</td>
+											<td>10%</td>
+											<td>3200$</td>
+										</tr>
+										<tr style="height: .5rem;"></tr>
+										<tr class="table-active">
+											<td>Product</td>
+											<td>5</td>
+											<td>100$</td>
+											<td>10%</td>
+											<td>3200$</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+							</div>
+						</div>
+						<div class="container-fluid">
+							<div class="row justify-content-end">
+								<div class="col-6">
+									<ul class="list-group mb-2">
+										<li class="list-group-item d-flex justify-content-between">
+											<span>Total (USD)</span>
+											<strong>$20</strong>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="modal-footer">
+						<div class="container">
+							<div class="row mb-5">
+								<div class="col-12">
+									<label for="address">Address</label>
+									<input type="text" class="form-control" id="address" placeholder="1234 Main St" required="">
+									<div class="invalid-feedback">
+										Please enter your shipping address.
+									</div>
+								</div>
+							</div>
+							<div class="row flex justify-content-center">
+								<button type="button" class="mr-3 btn btn-outline-secondary d-none d-md-block"
+									data-dismiss="modal">Close</button>
+								<button type="button" class="mr-3 btn btn-outline-secondary d-md-none"
+									data-dismiss="modal">Close</button>
+
+								<button type="button" class="mr-3 btn btn-lg btn-primary d-none d-md-block"><span class="save"></span>
+									Save</button>
+								<button type="button" class="mr-3 btn btn-primary d-md-none"><span class="save"></span> Save</button>
+
+								<button type="button" class=" btn btn-lg btn-primary d-none d-md-block"><span class="send"></span>
+									Send</button>
+								<button type="button" class=" btn btn-primary d-md-none"><span class="send"></span> Send</button>
+							</div>
+						</div>
+					</div>
+
+
+				</div>
+			</div>
+		</div>
 		{{> body}}
 	</main>
 	{{> mobile-nav}}
