Modal iPhone bug fix #3

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -24,7 +24,7 @@
 		<!-- Modal -->
 		<div class="modal fade" id="priceModal" tabindex="-1" role="dialog" aria-labelledby="priceModalTitle"
 			aria-hidden="true">
-			<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-dialog modal-dialog-scrollable modal-lg" role="document">
 				<div class="modal-content">
 
 
@@ -40,110 +40,112 @@
 						<div class="container-fluid">
 							<div class="row">
 								<div class="col p-0 m-0">
-								<table class="table table-sm table-borderless">
-									<thead>
-										<tr>
-											<th scope="col">Product</th>
-											<th scope="col">Quantity</th>
-											<th scope="col">Price</th>
-											<th scope="col">Discount</th>
-											<th scope="col">Total</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td colspan="5">
-												<div class="col-12 mb-3 mt-5">
-													<h4><span class="product"></span>Category 1</h4>
-												</div>
-											</td>
-										</tr>
-										<tr class="table-active">
-											<td>Product</td>
-											<td>5</td>
-											<td>100$</td>
-											<td>10%</td>
-											<td>3200$</td>
-										</tr>
-										<tr style="height: .5rem;"></tr>
-										<tr class="table-active">
-											<td>Product</td>
-											<td>5</td>
-											<td>100$</td>
-											<td>10%</td>
-											<td>3200$</td>
-										</tr>
-										<tr style="height: .5rem;"></tr>
-										<tr class="table-active">
-											<td>Product</td>
-											<td>5</td>
-											<td>100$</td>
-											<td>10%</td>
-											<td>3200$</td>
-										</tr>
-										<tr>
-											<td colspan="5">
-												<div class="col-12 mb-3 mt-5">
-													<h4><span class="product"></span>Category 1</h4>
-												</div>
-											</td>
-										</tr>
-										<tr class="table-active">
-											<td>Product</td>
-											<td>5</td>
-											<td>100$</td>
-											<td>10%</td>
-											<td>3200$</td>
-										</tr>
-										<tr style="height: .5rem;"></tr>
-										<tr class="table-active">
-											<td>Product</td>
-											<td>5</td>
-											<td>100$</td>
-											<td>10%</td>
-											<td>3200$</td>
-										</tr>
-										<tr style="height: .5rem;"></tr>
-										<tr class="table-active">
-											<td>Product</td>
-											<td>5</td>
-											<td>100$</td>
-											<td>10%</td>
-											<td>3200$</td>
-										</tr>
-										<tr>
-											<td colspan="5">
-												<div class="col-12 mb-3 mt-5">
-													<h4><span class="product"></span>Category 1</h4>
-												</div>
-											</td>
-										</tr>
-										<tr class="table-active">
-											<td>Product</td>
-											<td>5</td>
-											<td>100$</td>
-											<td>10%</td>
-											<td>3200$</td>
-										</tr>
-										<tr style="height: .5rem;"></tr>
-										<tr class="table-active">
-											<td>Product</td>
-											<td>5</td>
-											<td>100$</td>
-											<td>10%</td>
-											<td>3200$</td>
-										</tr>
-										<tr style="height: .5rem;"></tr>
-										<tr class="table-active">
-											<td>Product</td>
-											<td>5</td>
-											<td>100$</td>
-											<td>10%</td>
-											<td>3200$</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
+									<div class="">
+										<table class="table table-sm table-borderless">
+											<thead>
+												<tr>
+													<th scope="col">Product</th>
+													<th scope="col">Quantity</th>
+													<th scope="col">Price</th>
+													<th scope="col">Discount</th>
+													<th scope="col">Total</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td colspan="5">
+														<div class="col-12 mb-3 mt-5">
+															<h4><span class="product"></span>Category 1</h4>
+														</div>
+													</td>
+												</tr>
+												<tr class="table-active">
+													<td>Product</td>
+													<td>5</td>
+													<td>100$</td>
+													<td>10%</td>
+													<td>3200$</td>
+												</tr>
+												<tr style="height: .5rem;"></tr>
+												<tr class="table-active">
+													<td>Product</td>
+													<td>5</td>
+													<td>100$</td>
+													<td>10%</td>
+													<td>3200$</td>
+												</tr>
+												<tr style="height: .5rem;"></tr>
+												<tr class="table-active">
+													<td>Product</td>
+													<td>5</td>
+													<td>100$</td>
+													<td>10%</td>
+													<td>3200$</td>
+												</tr>
+												<tr>
+													<td colspan="5">
+														<div class="col-12 mb-3 mt-5">
+															<h4><span class="product"></span>Category 1</h4>
+														</div>
+													</td>
+												</tr>
+												<tr class="table-active">
+													<td>Product</td>
+													<td>5</td>
+													<td>100$</td>
+													<td>10%</td>
+													<td>3200$</td>
+												</tr>
+												<tr style="height: .5rem;"></tr>
+												<tr class="table-active">
+													<td>Product</td>
+													<td>5</td>
+													<td>100$</td>
+													<td>10%</td>
+													<td>3200$</td>
+												</tr>
+												<tr style="height: .5rem;"></tr>
+												<tr class="table-active">
+													<td>Product</td>
+													<td>5</td>
+													<td>100$</td>
+													<td>10%</td>
+													<td>3200$</td>
+												</tr>
+												<tr>
+													<td colspan="5">
+														<div class="col-12 mb-3 mt-5">
+															<h4><span class="product"></span>Category 1</h4>
+														</div>
+													</td>
+												</tr>
+												<tr class="table-active">
+													<td>Product</td>
+													<td>5</td>
+													<td>100$</td>
+													<td>10%</td>
+													<td>3200$</td>
+												</tr>
+												<tr style="height: .5rem;"></tr>
+												<tr class="table-active">
+													<td>Product</td>
+													<td>5</td>
+													<td>100$</td>
+													<td>10%</td>
+													<td>3200$</td>
+												</tr>
+												<tr style="height: .5rem;"></tr>
+												<tr class="table-active">
+													<td>Product</td>
+													<td>5</td>
+													<td>100$</td>
+													<td>10%</td>
+													<td>3200$</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
 							</div>
 						</div>
 						<div class="container-fluid">
@@ -175,15 +177,14 @@
 							<div class="row flex justify-content-center">
 								<button type="button" class="mr-3 btn btn-outline-secondary d-none d-md-block"
 									data-dismiss="modal">Close</button>
-								<button type="button" class="mr-3 btn btn-outline-secondary d-md-none"
-									data-dismiss="modal">Close</button>
+
 
 								<button type="button" class="mr-3 btn btn-lg btn-primary d-none d-md-block"><span class="save"></span>
 									Save</button>
 								<button type="button" class="mr-3 btn btn-primary d-md-none"><span class="save"></span> Save</button>
-
 								<button type="button" class=" btn btn-lg btn-primary d-none d-md-block"><span class="send"></span>
 									Send</button>
+
 								<button type="button" class=" btn btn-primary d-md-none"><span class="send"></span> Send</button>
 							</div>
 						</div>
