--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -131,17 +131,21 @@
                 </div>
                 <!-- Accordion wrapper -->
                 <div class="dropdown-divider"></div>
-                <div class="row justify-content-between my-1">
-                  <div class="col-6">
-                    <button type="reset" class="btn btn-xl btn-primary">Reset</button>
+                <div class="card">
+                  <div class="container my-2">
+                    <div class="row flex justify-content-center">
+                      <div class="col-6">
+                        <button type="reset" style="width: 100%;" class="btn btn-lg btn-primary">Reset</button>
+                      </div>
+                      <div class="col-6">
+                        <button type="button" style="width: 100%;" class="btn btn-lg btn-outline-secondary"
+                          data-dismiss="modal" data-toggle="dropdown">Close</button>
+                      </div>
+                    </div>
                   </div>
-                  <div class="col-6">
-                    <button type="button" class="btn btn-xl btn-outline-secondary" data-dismiss="modal"
-                      data-toggle="dropdown">Close</button>
-                  </div>
+
                 </div>
               </form>
-
             </div>
           </div>
         </div>
