--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -149,8 +149,8 @@
 							</div>
 						</div>
 						<div class="container-fluid">
-							<div class="row justify-content-end">
-								<div class="col-6">
+							<div class="row">
+								<div class="col-12">
 									<ul class="list-group mb-2">
 										<li class="list-group-item d-flex justify-content-between">
 											<span>Total (USD)</span>
@@ -165,7 +165,7 @@
 
 					<div class="modal-footer">
 						<div class="container">
-							<div class="row mb-5">
+							<div class="row mb-3">
 								<div class="col-12">
 									<label for="address">Address</label>
 									<input type="text" class="form-control" id="address" placeholder="1234 Main St" required="">
@@ -174,7 +174,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="row flex justify-content-center">
+							<div class="row flex justify-content-center justify-content-md-end">
 								<button type="button" class="mr-3 btn btn-outline-secondary d-none d-md-block"
 									data-dismiss="modal">Close</button>
 
