--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -40,15 +40,15 @@
                       <div class="p-4">
                         <div class="custom-control custom-switch mb-2">
                           <input type="checkbox" class="custom-control-input" id="categoriesSwitch1">
-                          <label class="custom-control-label" for="categoriesSwitch1">Condition 1</label>
+                          <label class="custom-control-label" for="categoriesSwitch1">Category 1</label>
                         </div>
                         <div class="custom-control custom-switch mb-2">
                           <input type="checkbox" class="custom-control-input" id="categoriesSwitch2">
-                          <label class="custom-control-label" for="categoriesSwitch2">Condition 2</label>
+                          <label class="custom-control-label" for="categoriesSwitch2">Category 2</label>
                         </div>
                         <div class="custom-control custom-switch mb-2">
                           <input type="checkbox" class="custom-control-input" id="categoriesSwitch3">
-                          <label class="custom-control-label" for="categoriesSwitch3">Condition 3</label>
+                          <label class="custom-control-label" for="categoriesSwitch3">Category 3</label>
                         </div>
                       </div>
                     </div>
@@ -58,10 +58,11 @@
 
                   <!-- Accordion card -->
                   <div class="card">
+
                     <!-- Card header -->
                     <div class="card-header" role="tab" id="headingTwo2">
-                      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2"
-                        aria-expanded="false" aria-controls="collapseTwo2">
+                      <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2" aria-expanded="true"
+                        aria-controls="collapseTwo2">
                         <h5 class="mb-0">
                           Filter 1 <i class="float-right fa fa-caret-down" aria-hidden="true"></i>
                         </h5>
@@ -69,9 +70,24 @@
                     </div>
 
                     <!-- Card body -->
-                    <div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2"
+                    <div id="collapseTwo2" class="collapse " role="tabpanel" aria-labelledby="headingTwo2"
                       data-parent="#accordionEx">
+                      <div class="p-4">
+                        <div class="custom-control custom-switch mb-2">
+                          <input type="checkbox" class="custom-control-input" id="categoriesSwitch1">
+                          <label class="custom-control-label" for="categoriesSwitch1">Filter 1</label>
+                        </div>
+                        <div class="custom-control custom-switch mb-2">
+                          <input type="checkbox" class="custom-control-input" id="categoriesSwitch2">
+                          <label class="custom-control-label" for="categoriesSwitch2">Filter 2</label>
+                        </div>
+                        <div class="custom-control custom-switch mb-2">
+                          <input type="checkbox" class="custom-control-input" id="categoriesSwitch3">
+                          <label class="custom-control-label" for="categoriesSwitch3">Filter 3</label>
+                        </div>
+                      </div>
                     </div>
+
                   </div>
                   <!-- Accordion card -->
 
@@ -80,30 +96,29 @@
 
                     <!-- Card header -->
                     <div class="card-header" role="tab" id="headingThree3">
-                      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3"
-                        aria-expanded="false" aria-controls="collapseThree3">
+                      <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3" aria-expanded="true"
+                        aria-controls="collapseThree3">
                         <h5 class="mb-0">
-                          Filters 2 <i class="float-right fa fa-caret-down" aria-hidden="true"></i>
+                          Filter 2 <i class="float-right fa fa-caret-down" aria-hidden="true"></i>
                         </h5>
                       </a>
                     </div>
 
                     <!-- Card body -->
-                    <div id="collapseThree3" class="collapse show" role="tabpanel" aria-labelledby="headingThree3"
+                    <div id="collapseThree3" class="collapse " role="tabpanel" aria-labelledby="headingThree3"
                       data-parent="#accordionEx">
-                      <!-- Material switch -->
                       <div class="p-4">
                         <div class="custom-control custom-switch mb-2">
-                          <input type="checkbox" class="custom-control-input" id="customSwitch1">
-                          <label class="custom-control-label" for="customSwitch1">Condition 1</label>
+                          <input type="checkbox" class="custom-control-input" id="categoriesSwitch1">
+                          <label class="custom-control-label" for="categoriesSwitch1">Filter 1</label>
                         </div>
                         <div class="custom-control custom-switch mb-2">
-                          <input type="checkbox" class="custom-control-input" id="customSwitch2">
-                          <label class="custom-control-label" for="customSwitch2">Condition 1</label>
+                          <input type="checkbox" class="custom-control-input" id="categoriesSwitch2">
+                          <label class="custom-control-label" for="categoriesSwitch2">Filter 2</label>
                         </div>
                         <div class="custom-control custom-switch mb-2">
-                          <input type="checkbox" class="custom-control-input" id="customSwitch3">
-                          <label class="custom-control-label" for="customSwitch3">Condition 1</label>
+                          <input type="checkbox" class="custom-control-input" id="categoriesSwitch3">
+                          <label class="custom-control-label" for="categoriesSwitch3">Filter 3</label>
                         </div>
                       </div>
                     </div>
@@ -113,19 +128,36 @@
 
                   <!-- Accordion card -->
                   <div class="card">
+
                     <!-- Card header -->
                     <div class="card-header" role="tab" id="headingFour4">
-                      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3"
-                        aria-expanded="false" aria-controls="collapseThree3">
+                      <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseFour4" aria-expanded="true"
+                        aria-controls="collapseFour4">
                         <h5 class="mb-0">
-                          Filters 3 <i class="float-right fa fa-caret-down" aria-hidden="true"></i>
+                          Filter 3 <i class="float-right fa fa-caret-down" aria-hidden="true"></i>
                         </h5>
                       </a>
                     </div>
+
                     <!-- Card body -->
-                    <div id="collapseFour4" class="collapse" role="tabpanel" aria-labelledby="headingThree3"
+                    <div id="collapseFour4" class="collapse " role="tabpanel" aria-labelledby="headingFour4"
                       data-parent="#accordionEx">
+                      <div class="p-4">
+                        <div class="custom-control custom-switch mb-2">
+                          <input type="checkbox" class="custom-control-input" id="categoriesSwitch1">
+                          <label class="custom-control-label" for="categoriesSwitch1">Filter 1</label>
+                        </div>
+                        <div class="custom-control custom-switch mb-2">
+                          <input type="checkbox" class="custom-control-input" id="categoriesSwitch2">
+                          <label class="custom-control-label" for="categoriesSwitch2">Filter 2</label>
+                        </div>
+                        <div class="custom-control custom-switch mb-2">
+                          <input type="checkbox" class="custom-control-input" id="categoriesSwitch3">
+                          <label class="custom-control-label" for="categoriesSwitch3">Filter 3</label>
+                        </div>
+                      </div>
                     </div>
+
                   </div>
                   <!-- Accordion card -->
                 </div>
